[package]
name = "smart-contract"
version = "0.0.1"
authors = ["losfair <zhy20000919@hotmail.com>"]
description = "Write smart contracts for Wavelet in Rust."
license = "MIT"
repository = "https://github.com/perlin-network/smart-contract-rs"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
