[package]
name = "smart-contract-macros"
version = "0.2.2"
authors = ["Kenta Iwasaki <kenta@perlin.net>"]
edition = "2018"
description = "Procedual macros for writing smart contracts for wavelet."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.9"
proc-macro2 = "0.4.24"

[dependencies.syn]
version = "0.15.26"
features = ["full", "visit"]
