[package]
name = "smart-contract"
version = "0.1.1"
authors = ["losfair <zhy20000919@hotmail.com>"]
description = "Write smart contracts for Wavelet in Rust."
license = "MIT"
repository = "https://github.com/perlin-network/smart-contract-rs"
edition = "2018"

[dependencies]
wee_alloc = "0.4.4"

[features]
no_std = []