[package]
name = "transfer-back"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
smart_contract = { path = "../../smart-contract" }
smart_contract_macro = { path = "../../smart-contract-macro"}